--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.wangkui</groupId>
     <artifactId>mytest</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0</version>
     <name>mytest</name>
     <description>Demo project for Spring Boot</description>
     <properties>
